--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -15,12 +15,8 @@ func claperr(format string, a ...any) {
 	fmt.Fprintf(os.Stderr, format, a...)
 }
 
-type clapUsagePrinter interface {
-	printUsage(to *os.File)
-}
-
 type clapper struct {
-	cmd  clapUsagePrinter
+	usg  func(to *os.File)
 	args []string
 	idx  int
 
@@ -35,8 +31,8 @@ type clapper struct {
 	optHasEq bool
 }
 
-func (c *clapper) exitUsgGood() {
-	c.cmd.printUsage(os.Stdout)
+func (z *clapper) exitUsgGood() {
+	z.usg(os.Stdout)
 	os.Exit(0)
 }
 
@@ -44,7 +40,7 @@ func (c *clapper) exitUsgGood() {
 
 func (z *clapper) exitMissingArg(name string) {
 	claperr("not enough args: no \033[1;33m%s\033[0m provided\n", name)
-	z.cmd.printUsage(os.Stderr)
+	z.usg(os.Stderr)
 	os.Exit(1)
 }
 {{- end }}
@@ -53,7 +49,7 @@ func (z *clapper) exitMissingArg(name string) {
 
 func (z *clapper) exitUnknownCmd(name string) {
 	claperr("unknown command '%s'\n", name)
-	z.cmd.printUsage(os.Stderr)
+	z.usg(os.Stderr)
 	os.Exit(1)
 }
 {{- end }}
