refactor: use 'with' in tmpls for opt, arg and subcmd sections, and cleanup (#77)

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -11,7 +11,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 	{{- with .EnvVals }}
 	{{- range . }}
 	if p.stageEnv("{{ .VarName }}") {
-		c.{{ .FieldName }} = p.{{ .FieldType.ClapperMethodName }}()
+		c.{{ .FieldName }} = p.{{ .FieldType.ClapIterMethodName }}()
 	}
 	{{- end }}
 	p.envName, p.envVal = "", ""
@@ -26,7 +26,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 			p.exitUsgGood()
 			{{- continue }}
 		{{- end }}
-			c.{{ .FieldName }} = p.{{ .FieldType.ClapperMethodName }}()
+			c.{{ .FieldName }} = p.{{ .FieldType.ClapIterMethodName }}()
 	{{- end }}
 		default:
 			claperr("unknown option '%s'\n", p.optName)
@@ -35,37 +35,29 @@ func (c *{{ .TypeName }}) parse(args []string) {
 	}
 
 	{{- /* Arguments. */ -}}
-	{{- if .HasArgs }}
+	{{- with .Args }}
 	args = args[p.idx:]
 
-		{{- /* Add error handling for missing arguments that are required. */ -}}
-		{{- range $i, $arg := .RequiredArgs }}
+		{{- range $i, $arg := . }}
 	if len(args) < {{ add $i 1 }} {
+			{{- if $arg.IsRequired }}
 		p.exitMissingArg("{{ $arg.UsgName }}")
-	}
-		{{- end -}}
-
-		{{- range $i, $arg := .Args }}
-
-			{{- if not $arg.IsRequired }}
-	if len(args) < {{ add $i 1 }} {
+			{{- else }}
 		return
-	}
 			{{- end }}
-
-	c.{{ .FieldName }} = p.{{ .FieldType.ClapperMethodName }}()
-
+	}
+	c.{{ .FieldName }} = p.{{ .FieldType.ClapIterMethodName }}()
 		{{- end -}}{{- /* range all args */ -}}
-	{{- end }}{{- /* if args */ -}}
+	{{- end }}{{- /* with args */ -}}
 
 	{{- /* Subcommands. */ -}}
-	{{- if .HasSubcmds }}
+	{{- with .Subcmds }}
 	if p.idx >= len(args) {
 		c.printUsage(os.Stderr)
 		os.Exit(1)
 	}
 	switch args[p.idx] {
-	{{- range .Subcmds }}
+	{{- range . }}
 	case {{ .QuotedNames }}:
 		c.{{ .FieldName }} = new({{ .TypeName }})
 		c.{{ .FieldName }}.parse(args[p.idx+1:])
